tests/success/0011_clone.ec
theory T.
  type t.
end T.

clone T as U.

type t = U.t.
