tests/fail/0003_theory.ec
theory T.
  type t = int.
end T.

theory T.
 type u = int.
end T.
